[package]
name = "keylog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cli"
path = "cli/main.rs"

[[bin]]
name = "logger"
path = "src/main.rs"



[dependencies]
bincode = "1.3.3"
input = "0.8.3"
libc = "0.2.151"
nix = { version = "0.27.1", features = ["poll"] }
serde = { version = "1.0.193", features = ["derive"] }
